<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainBackground"
    tools:mContext=".LoginCodeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            style="@style/TextNunitoBold24Black87"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen26"
            android:layout_marginTop="@dimen/dimen54"
            android:layout_marginRight="@dimen/dimen26"
            android:text="@string/check_code_text_title" />

        <TextView
            style="@style/TextRubikRegular15Black87"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen26"
            android:layout_marginTop="@dimen/dimen8"
            android:layout_marginRight="@dimen/dimen26"
            android:text="@string/check_code_text_sub"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edtInputCode"
            style="@style/whiteborderblackrounded"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen50"
            android:layout_marginLeft="@dimen/dimen26"
            android:layout_marginTop="@dimen/dimen34"
            android:layout_marginRight="@dimen/dimen26"
            android:gravity="center"
            android:hint="@string/check_code_edit_hint_voucher"
            android:inputType="textCapCharacters"
            android:textAllCaps="true"/>

        <TextView
            android:id="@+id/txtCheckCodeAgree"
            style="@style/TextRubikRegular12Black87"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen26"
            android:layout_marginTop="@dimen/dimen22"
            android:layout_marginEnd="@dimen/dimen26"
            android:gravity="center"
            android:paddingStart="@dimen/dimen12"
            android:paddingEnd="@dimen/dimen12"
            android:text="@string/check_code_text_agreement" />

        <Button
            android:id="@+id/button_masuk"
            style="@style/buttonyellowroundsize14black"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen36"
            android:layout_marginLeft="@dimen/dimen26"
            android:layout_marginTop="@dimen/dimen12"
            android:layout_marginRight="@dimen/dimen26"
            android:layout_marginBottom="@dimen/dimen24"
            android:background="@drawable/button_yellow"
            android:text="@string/check_code_button_get_started"
            android:textAllCaps="false"
            app:backgroundTint="@null"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_border_white"
        android:elevation="@dimen/dimen8"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            style="@style/TextRubikRegular15Black87"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen26"
            android:layout_marginTop="@dimen/dimen34"
            android:layout_marginEnd="@dimen/dimen26"
            android:layout_marginBottom="@dimen/dimen16"
            android:gravity="center"
            android:text="@string/check_code_text_buy" />

        <Button
            android:id="@+id/btnBuyCode"
            style="@style/buttonpurplesize14white"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen36"
            android:layout_marginStart="@dimen/dimen26"
            android:layout_marginTop="@dimen/dimen8"
            android:layout_marginEnd="@dimen/dimen26"
            android:layout_marginBottom="@dimen/dimen34"
            android:background="@drawable/button_purple"
            android:text="@string/check_code_button_buy"
            android:textAllCaps="false"
            app:backgroundTint="@null"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
